--- a/AdminSystem/css/stylesheet.css
+++ b/AdminSystem/css/stylesheet.css
@@ -58,10 +58,12 @@ body {
 
 h2 {
     margin-bottom: 20px;
-    color: #8c52ff;
+    background: linear-gradient(90deg, #ff3131, #ffbd59);
     font-family: "Poppins", sans-serif;
     font-weight: 700;
     font-style: normal;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
     font-size: 38px;
 }
 
@@ -90,7 +92,7 @@ h2 {
         border: 1px solid #ccc;
         border-radius: 4px;
         box-sizing: border-box;
-        background: linear-gradient(90deg, #8c52ff, #ffbd59);
+        background: linear-gradient(90deg, #ff3131, #ffbd59);
         color: white;
         font-family: "Poppins", sans-serif;
         font-weight: 500;
@@ -108,7 +110,7 @@ h2 {
         background-color: #6a0dad;
         border: none;
         border-radius: 4px;
-        background: linear-gradient(90deg, #8c52ff, #ffbd59);
+        background: linear-gradient(90deg, #ff3131, #ffbd59);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         cursor: pointer;
